--- a/Rossmann.ipynb
+++ b/Rossmann.ipynb
@@ -1648,7 +1648,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Como as variaveis impactam o fenomeno?, Qual a força desse impacto?\n",
+    "    - A analise exploratoria dos dados serve para medir os impactos das variaveis em relacao as \n",
+    "\n",
+    "\n",
+    "### Quais  os tres Objetivos da EDA\n",
+    "1 - Ganhas expertencias de negocios \n",
+    "    * entender comportamendo dados yime de negocio kpis metricas medidas.\n",
+    "2 - Validar hipoteses de Negocio. (Insights) \n",
+    "    * validar criar mind map gera insigths , gerar surpresa forbecer inf que as pessoas nao sabem dela, a loga vende mais no veraro tipo as pessoas nao sabia\n",
+    "    * choca a crenca exp sabe que vende meis fim de semana feriado vende menos informacao impirica nao foi analisado o dado e o que ela actredita , se vc gera insigh e prova que nao e vdd isso vc choca a pessoa pq quebra a crenca dessa pessoa fornecer info nova ou choca a crenca\n",
+    "\n",
+    "3 - Perceber variaveis que sao importantes para o modelo.\n",
+    "    * Qais variavei impactam o fenomeno, ensinaria o modelo mellor fitures mais relevantes modelo falpra coloca mais na analise eles sabia que nao influenciava eda e importate oara dar esse conhevimento\n",
+    "\n",
+    "Analise exploratoria dos dados\n",
+    "\n",
+    "1 - Analise univariada:\n",
+    "    - Como é essa variavel?\n",
+    "    (Min,Max,Distribuiçao,Range,...)\n",
+    "2 - Analise Bivariada:\n",
+    "    \n",
+    "\n",
+    "3- Analise Multivariada:\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
