--- a/Rossmann.ipynb
+++ b/Rossmann.ipynb
@@ -4461,7 +4461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4614,7 +4614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# training and test dataset for boruta\n",
+    "### training and test dataset for boruta\n",
     "passa x_train.drop para dropar as colunas sales e date pq elas soa dados de train e passa o value para pegar os vl o np  e nao o df \n",
     "y_train pega o values pq agr nao e nesc drop nada passa o ravel para colocar tudo dentro do vetor.\n",
     "\n",
@@ -4725,7 +4725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4754,15 +4754,15 @@
     "# columns to add\n",
     "feat_to_add = ['date', 'sales']\n",
     "\n",
-    "cols_selected_boruta_full = cols_selected_boruta.copy()\n",
-    "cols_selected_boruta_full.extend( feat_to_add )"
+    "# cols_selected_boruta_full = cols_selected_boruta.copy()\n",
+    "# cols_selected_boruta_full.extend( feat_to_add )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.0.0 MACHINE LEARNING MODELLING"
+    "# 7.0. MACHINE LEARNING MODELLING"
    ]
   },
   {
@@ -4773,10 +4773,7 @@
    "source": [
     "x_train = X_train[ cols_selected_boruta ]\n",
     "x_test = X_test[ cols_selected_boruta ]\n",
-    "\n",
-    "# Time Series Data Preparation\n",
-    "\n",
-    "x_training = X_train[ cols_selected_boruta_full ]"
+    "\n"
    ]
   },
   {
@@ -4788,19 +4785,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_absolute_percentage_error(y, yhat):\n",
+    "    return np.mean( np.abs( ( y- yhat) / y ) )\n",
+    "\n",
+    "\n",
+    "def ml_error(model_name, y, yhat ):\n",
+    "    mae = mean_absolute_error(y, yhat)\n",
+    "    mape = mean_absolute_percentage_error(y, yhat)\n",
+    "    rmse = np.sqrt( mean_squared_error( y, yhat) )\n",
+    "    \n",
+    "    return pd.DataFrame( {'Model_Name': model_name,\n",
+    "                          'MAE': mae,\n",
+    "                          'MAPE': mape,\n",
+    "                          'RMSE': rmse}, index=[0] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time Series Data Preparation\n",
+    "x_training = X_train[ cols_selected_boruta_full ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ml_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [253], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m yhat_baseline \u001b[38;5;241m=\u001b[39m aux1[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpredictions\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# performance\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m baseline_result \u001b[38;5;241m=\u001b[39m \u001b[43mml_error\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAverage Model\u001b[39m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39mexpm1(y_test), np\u001b[38;5;241m.\u001b[39mexpm1(yhat_baseline))\n\u001b[1;32m     13\u001b[0m baseline_result\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ml_error' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Model_Name          MAE      MAPE         RMSE\n",
+       "0  Average Model  1354.800353  0.455051  1835.135542"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4808,13 +4882,13 @@
     "\n",
     "aux1['sales'] = y_test.copy()\n",
     "\n",
-    "# media das vendas de todas a lojas desse conjunto de dados\n",
+    "# media das vendas de cada uma das lojas desse conjunto de dados\n",
     "\n",
-    "# prediction\n",
+    "# prediction = todas predicoes medias de vendas por loja.\n",
     "aux2 = aux1[['store', 'sales']].groupby('store').mean().reset_index().rename(columns={'sales': 'predictions'})\n",
     "aux1 = pd.merge(aux1, aux2, how='left', on='store')\n",
     "yhat_baseline = aux1['predictions']\n",
-    "# performance\n",
+    "# performance = calculo das medias\n",
     "baseline_result = ml_error('Average Model', np.expm1(y_test), np.expm1(yhat_baseline))\n",
     "baseline_result\n"
    ]
@@ -4828,24 +4902,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression, Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'LinearRegression' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [255], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# model\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m lr \u001b[38;5;241m=\u001b[39m \u001b[43mLinearRegression\u001b[49m()\u001b[38;5;241m.\u001b[39mfit(x_train, y_train)  \u001b[38;5;66;03m# prediction\u001b[39;00m\n\u001b[1;32m      3\u001b[0m yhat_lr \u001b[38;5;241m=\u001b[39m lr\u001b[38;5;241m.\u001b[39mpredict(x_test)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# performance\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'LinearRegression' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1862.141344</td>\n",
+       "      <td>0.291218</td>\n",
+       "      <td>2667.970455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model_Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression  1862.141344  0.291218  2667.970455"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# model\n",
-    "lr = LinearRegression().fit(x_train, y_train)  # prediction\n",
+    "lr = LinearRegression().fit(x_train, y_train)  \n",
+    "# prediction\n",
     "yhat_lr = lr.predict(x_test)\n",
     "# performance\n",
     "lr_result = ml_error('Linear Regression', np.expm1(y_test), np.expm1(yhat_lr))\n",
@@ -4856,61 +4977,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.3 Linear regression Regularized model \n"
+    "## 7.3 Linear regression Regularized model - Lasso\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr_result_cv = cross_validation(x_training, 5, 'Linear Regression', lr, ␣ 􏰀→verbose=False)\n",
-    "lr_result_cv\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hallanmiranda/.pyenv/versions/3.10.6/lib/python3.10/site-packages/sklearn/linear_model/_coordinate_descent.py:631: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 3.114e+02, tolerance: 1.455e+01\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1892.262926</td>\n",
+       "      <td>0.294548</td>\n",
+       "      <td>2725.676545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model_Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression - Lasso  1892.262926  0.294548  2725.676545"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model\n",
-    "lrr = Lasso(alpha=0.01).fit(x_train, y_train)  # prediction\n",
+    "lrr = Lasso( alpha=0.01 ).fit( x_train, y_train )  \n",
+    "# prediction\n",
     "yhat_lrr = lrr.predict(x_test)\n",
     "# performance\n",
-    "lrr_result = ml_error('Linear Regression - Lasso', np.expm1(y_test), np. 􏰀→expm1(yhat_lrr))\n",
+    "lrr_result = ml_error( 'Linear Regression - Lasso', np.expm1(y_test), np.expm1( yhat_lrr ) );\n",
     "lrr_result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
-    " lrr_result_cv = cross_validation( x_training, 5, 'Lasso', lrr, verbose=False ) lrr_result_cv"
+    "# lrr_result_cv = cross_validation( x_training, 5, 'Lasso', lrr, verbose=False )\n",
+    "# lrr_result_cv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.4. Randon Forest Regrasion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>692.788229</td>\n",
+       "      <td>0.105653</td>\n",
+       "      <td>1017.089735</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Model_Name         MAE      MAPE         RMSE\n",
+       "0  Random Forest Regressor  692.788229  0.105653  1017.089735"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# model\n",
-    "rf = RandomForestRegressor(n_estimators=100, n_jobs=-1, random_state=42).fit(␣ 􏰀→x_train, y_train)\n",
+    "rf = RandomForestRegressor(n_estimators=100, n_jobs=-1, random_state=42).fit(x_train, y_train)\n",
     "# prediction\n",
     "yhat_rf = rf.predict(x_test)\n",
     "# performance\n",
-    "rf_result = ml_error('Random Forest Regressor', np.expm1(y_test), np.expm1(␣ 􏰀→yhat_rf))\n",
+    "rf_result = ml_error('Random Forest Regressor', np.expm1(y_test), np.expm1(yhat_rf))\n",
     "rf_result\n"
    ]
   },
@@ -4920,8 +5148,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_result_cv = cross_validation(x_training, 5, 'Random Forest Regressor', rf, ␣ 􏰀→verbose=True)\n",
-    "rf_result_cv\n"
+    "# rf_result_cv = cross_validation(x_training, 5, 'Random Forest Regressor', rf, ␣ 􏰀→verbose=True)\n",
+    "# rf_result_cv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.5. XGBoost Regressor"
    ]
   },
   {
