--- a/Rossmann.ipynb
+++ b/Rossmann.ipynb
@@ -5135,8 +5135,10 @@
    "source": [
     "# model\n",
     "rf = RandomForestRegressor(n_estimators=100, n_jobs=-1, random_state=42).fit(x_train, y_train)\n",
+    "\n",
     "# prediction\n",
     "yhat_rf = rf.predict(x_test)\n",
+    "\n",
     "# performance\n",
     "rf_result = ml_error('Random Forest Regressor', np.expm1(y_test), np.expm1(yhat_rf))\n",
     "rf_result\n"
@@ -5161,9 +5163,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22:28:14] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-cpython-38/xgboost/src/learner.cc:767: \n",
+      "Parameters: { \"colsample_bytee\" } are not used.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost Regressor</td>\n",
+       "      <td>6683.199117</td>\n",
+       "      <td>0.949519</td>\n",
+       "      <td>7329.566772</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model_Name          MAE      MAPE         RMSE\n",
+       "0  XGBoost Regressor  6683.199117  0.949519  7329.566772"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model\n",
     "model_xgb = xgb.XGBRegressor(objective='reg:squarederror',\n",
@@ -5173,40 +5242,100 @@
     "                             subsample=0.7,\n",
     "                             colsample_bytee=0.9).fit(x_train, y_train)\n",
     "# prediction\n",
-    "yhat_xgb=model_xgb.predict(x_test)\n",
+    "yhat_xgb = model_xgb.predict(x_test)\n",
     "# performance\n",
-    "xgb_result=ml_error('XGBoost Regressor', np.expm1(y_test), np.expm1(␣ 􏰀→yhat_xgb))\n",
+    "xgb_result = ml_error('XGBoost Regressor', np.expm1(y_test), np.expm1( yhat_xgb))\n",
     "xgb_result\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "xgb_result_cv = cross_validation(x_training, 5, 'XGBoost Regressor', ␣ 􏰀→model_xgb, verbose=True)\n",
-    "xgb_result_cv\n"
+    "## 7.6. Compare Model's Performace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 285,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>692.788229</td>\n",
+       "      <td>0.105653</td>\n",
+       "      <td>1017.089735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1892.262926</td>\n",
+       "      <td>0.294548</td>\n",
+       "      <td>2725.676545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost Regressor</td>\n",
+       "      <td>6683.199117</td>\n",
+       "      <td>0.949519</td>\n",
+       "      <td>7329.566772</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model_Name          MAE      MAPE         RMSE\n",
+       "0    Random Forest Regressor   692.788229  0.105653  1017.089735\n",
+       "0              Average Model  1354.800353  0.455051  1835.135542\n",
+       "0  Linear Regression - Lasso  1892.262926  0.294548  2725.676545\n",
+       "0          XGBoost Regressor  6683.199117  0.949519  7329.566772"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " modelling_result = pd.concat( [baseline_result, lr_result, lrr_result,␣ 􏰀→rf_result, xgb_result] )\n",
-    "modelling_result.sort_values( 'RMSE' )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelling_result_cv = pd.concat([lr_result_cv, lrr_result_cv, rf_result_cv, ␣ 􏰀→xgb_result_cv])\n",
-    "modelling_result_cv\n"
+    "modelling_result = pd.concat([baseline_result,lrr_result, rf_result,xgb_result])\n",
+    "modelling_result.sort_values('RMSE')"
    ]
   },
   {
