Conversão da performance para resultado financeiro

--- a/Rossmann.ipynb
+++ b/Rossmann.ipynb
@@ -5339,6 +5339,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8.0.0 Conversão da performance para resultado financeiro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
