--- a/Rossmann.ipynb
+++ b/Rossmann.ipynb
@@ -4681,7 +4681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.2.1. Best Features from Boruta"
+    "## 6.2.1. Best Features from Boruta"
    ]
   },
   {
@@ -4720,7 +4720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.3.0 Manual fecture Selection"
+    "## 6.3.0 Manual fecture Selection"
    ]
   },
   {
@@ -4754,8 +4754,8 @@
     "# columns to add\n",
     "feat_to_add = ['date', 'sales']\n",
     "\n",
-    "# cols_selected_boruta_full = cols_selected_boruta.copy()\n",
-    "# cols_selected_boruta_full.extend( feat_to_add )"
+    "cols_selected_boruta_full = cols_selected_boruta.copy()\n",
+    "cols_selected_boruta_full.extend( feat_to_add )"
    ]
   },
   {
@@ -5337,6 +5337,181 @@
     "modelling_result = pd.concat([baseline_result,lrr_result, rf_result,xgb_result])\n",
     "modelling_result.sort_values('RMSE')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.5.1. XGBoost Regressor - Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cross_validation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [291], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m xgb_result_cv \u001b[38;5;241m=\u001b[39m \u001b[43mcross_validation\u001b[49m(x_training, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXGBoost Regressor\u001b[39m\u001b[38;5;124m'\u001b[39m,model_xgb, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m xgb_result_cv\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cross_validation' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_result_cv = cross_validation(x_training, 5, 'XGBoost Regressor',model_xgb, verbose=True)\n",
+    "xgb_result_cv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.6. Compare Model’s Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.6.1. Single Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model_Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>692.788229</td>\n",
+       "      <td>0.105653</td>\n",
+       "      <td>1017.089735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1862.141344</td>\n",
+       "      <td>0.291218</td>\n",
+       "      <td>2667.970455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1892.262926</td>\n",
+       "      <td>0.294548</td>\n",
+       "      <td>2725.676545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XGBoost Regressor</td>\n",
+       "      <td>6683.199117</td>\n",
+       "      <td>0.949519</td>\n",
+       "      <td>7329.566772</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model_Name          MAE      MAPE         RMSE\n",
+       "0    Random Forest Regressor   692.788229  0.105653  1017.089735\n",
+       "0              Average Model  1354.800353  0.455051  1835.135542\n",
+       "0          Linear Regression  1862.141344  0.291218  2667.970455\n",
+       "0  Linear Regression - Lasso  1892.262926  0.294548  2725.676545\n",
+       "0          XGBoost Regressor  6683.199117  0.949519  7329.566772"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelling_result = pd.concat( [baseline_result, lr_result, lrr_result,rf_result, xgb_result] )\n",
+    "modelling_result.sort_values( 'RMSE' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.6.2. Real Performance - Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lr_result_cv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [290], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m modelling_result_cv \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([\u001b[43mlr_result_cv\u001b[49m, lrr_result_cv, rf_result_cv,xgb_result_cv])\n\u001b[1;32m      2\u001b[0m modelling_result_cv\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lr_result_cv' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "modelling_result_cv = pd.concat([lr_result_cv, lrr_result_cv, rf_result_cv,xgb_result_cv])\n",
+    "modelling_result_cv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
