--- a/rosmman.ipynb
+++ b/rosmman.ipynb
@@ -69,110 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-25T20:45:00.055597Z",
-     "start_time": "2020-02-25T20:44:59.886685Z"
-    },
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "def cross_validation( x_training, kfold, model_name, model, verbose=False ):\n",
-    "    mae_list = []\n",
-    "    mape_list = []\n",
-    "    rmse_list = []\n",
-    "    for k in reversed( range( 1, kfold+1 ) ):\n",
-    "        if verbose:\n",
-    "            print( '\\nKFold Number: {}'.format( k ) )\n",
-    "        # start and end date for validation \n",
-    "        validation_start_date = x_training['date'].max() - datetime.timedelta( days=k*6*7)\n",
-    "        validation_end_date = x_training['date'].max() - datetime.timedelta( days=(k-1)*6*7)\n",
-    "\n",
-    "        # filtering dataset\n",
-    "        training = x_training[x_training['date'] < validation_start_date]\n",
-    "        validation = x_training[(x_training['date'] >= validation_start_date) & (x_training['date'] <= validation_end_date)]\n",
-    "\n",
-    "        # training and validation dataset\n",
-    "        # training\n",
-    "        xtraining = training.drop( ['date', 'sales'], axis=1 ) \n",
-    "        ytraining = training['sales']\n",
-    "\n",
-    "        # validation\n",
-    "        xvalidation = validation.drop( ['date', 'sales'], axis=1 )\n",
-    "        yvalidation = validation['sales']\n",
-    "\n",
-    "        # model\n",
-    "        m = model.fit( xtraining, ytraining )\n",
-    "\n",
-    "        # prediction\n",
-    "        yhat = m.predict( xvalidation )\n",
-    "\n",
-    "        # performance\n",
-    "        m_result = ml_error( model_name, np.expm1( yvalidation ), np.expm1( yhat ) )\n",
-    "\n",
-    "        # store performance of each kfold iteration\n",
-    "        mae_list.append(  m_result['MAE'] )\n",
-    "        mape_list.append( m_result['MAPE'] )\n",
-    "        rmse_list.append( m_result['RMSE'] )\n",
-    "\n",
-    "    return pd.DataFrame( {'Model Name': model_name,\n",
-    "                          'MAE CV': np.round( np.mean( mae_list ), 2 ).astype( str ) + ' +/- ' + np.round( np.std( mae_list ), 2 ).astype( str ),\n",
-    "                          'MAPE CV': np.round( np.mean( mape_list ), 2 ).astype( str ) + ' +/- ' + np.round( np.std( mape_list ), 2 ).astype( str ),\n",
-    "                          'RMSE CV': np.round( np.mean( rmse_list ), 2 ).astype( str ) + ' +/- ' + np.round( np.std( rmse_list ), 2 ).astype( str ) }, index=[0] )\n",
-    "\n",
-    "\n",
-    "def mean_percentage_error( y, yhat ):\n",
-    "    return np.mean( ( y - yhat ) / y )\n",
-    "     \n",
-    "    \n",
-    "def mean_absolute_percentage_error( y, yhat ):\n",
-    "    return np.mean( np.abs( ( y - yhat ) / y ) )\n",
-    "\n",
-    "    \n",
-    "def ml_error( model_name, y, yhat ):\n",
-    "    mae = mean_absolute_error( y, yhat )\n",
-    "    mape = mean_absolute_percentage_error( y, yhat )\n",
-    "    rmse = np.sqrt( mean_squared_error( y, yhat ) )\n",
-    "    \n",
-    "    return pd.DataFrame( { 'Model Name': model_name, \n",
-    "                           'MAE': mae, \n",
-    "                           'MAPE': mape,\n",
-    "                           'RMSE': rmse }, index=[0] )\n",
-    "\n",
-    "def cramer_v( x, y ):\n",
-    "    cm = pd.crosstab( x, y ).values\n",
-    "    n = cm.sum()\n",
-    "    r, k = cm.shape\n",
-    "    \n",
-    "    chi2 = ss.chi2_contingency( cm )[0]\n",
-    "    chi2corr = max( 0, chi2 - (k-1)*(r-1)/(n-1) )\n",
-    "    \n",
-    "    kcorr = k - (k-1)**2/(n-1)\n",
-    "    rcorr = r - (r-1)**2/(n-1)\n",
-    "    \n",
-    "    return np.sqrt( (chi2corr/n) / ( min( kcorr-1, rcorr-1 ) ) )\n",
-    "\n",
-    "\n",
-    "\n",
-    "def jupyter_settings():\n",
-    "    %matplotlib inline\n",
-    "   \n",
-    "    plt.style.use( 'bmh' )\n",
-    "    plt.rcParams['figure.figsize'] = [25, 12]\n",
-    "    plt.rcParams['font.size'] = 24\n",
-    "    \n",
-    "    display( HTML( '<style>.container { width:100% !important; }</style>') )\n",
-    "    pd.options.display.max_columns = None\n",
-    "    pd.options.display.max_rows = None\n",
-    "    pd.set_option( 'display.expand_frame_repr', False )\n",
-    "    \n",
-    "    sns.set()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
@@ -4772,8 +4668,7 @@
     "        return df1\n",
     "\n",
     "\n",
-    "    def filter_enginer(self, df2):\n",
-    "    \n",
+    "    def feature_engineering(self, df2):\n",
     "        # year\n",
     "        df2['year'] = df2['date'].dt.year\n",
     "\n",
@@ -4813,17 +4708,6 @@
     "        \n",
     "        return df2\n",
     "\n",
-    "    # def data_preparation(self,df5):\n",
-    "        \n",
-    "    #     # competition distance\n",
-    "    #     df5['competition_distance'] = self.competition_distace_scaler.fit_transform( df5[['competition_distance']].values )\n",
-    "    #     # competition time month\n",
-    "    #     df5['competition_time_month'] = self.competition_time_month_scaler.fit_transform( df5[['competition_time_month']].values )\n",
-    "    #     # promo time week\n",
-    "    #     df5['promo_time_week'] = self.promo_time_week_scaler.fit_transform( df5[['promo_time_week']].values )\n",
-    "    #     # year\n",
-    "    #     df5['year'] = self.year_scaler.fit_transform( df5[['year']].values )\n",
-    "\n",
     "    def data_preparation(self, df5):\n",
     "        # competition distance\n",
     "        df5['competition_distance'] = self.competition_distace_scaler.fit_transform(df5[['competition_distance']].values)\n",
@@ -4834,8 +4718,6 @@
     "        # year\n",
     "        df5['year'] = self.year_scaler.fit_transform(df5[['year']].values)\n",
     "       \n",
-    "\n",
-    "\n",
     "        # state_holiday - One Hot Encoding\n",
     "        df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday']) \n",
     "\n",
@@ -4889,7 +4771,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas \n",
+    "from flask             import Flask, request, Response\n",
+    "from rossmann.Rossmann import Rossmann\n",
+    "\n",
+    "# Loading model\n",
+    "model = pickle.load( open( '/Users/hallanmiranda/Documents/repos/projeto_portfolio/pa003-Rossman/model/model_rossmann.pkl', 'rb' ) )\n",
+    "\n",
+    "# Inicialize API\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route( '/rossmann/predict', methods=['POST'] )\n",
+    "def rossomann_predict():\n",
+    "    test_json = request.get_jason()\n",
+    "\n",
+    "    if test_json:# There is data\n",
+    "\n",
+    "        if isinstance( test_json, dict ):# unique exemple\n",
+    "            test_raw = pd.DataFrame( test_json, index=[0] )\n",
+    "        else: # multiple exmple\n",
+    "            test_json = pd.DataFrame( test_json, columns=test_json[0].keys() )\n",
+    "\n",
+    "        # Instace Rossmann\n",
+    "        pipeline = Rossmann()\n",
+    "\n",
+    "        # Data Clean\n",
+    "        df1 = pipeline.data_cleaning( test_raw )\n",
+    "        #Feacture Enginier\n",
+    "        df2 = pipeline.feature_engineering( df1 )\n",
+    "        #Data Preparation\n",
+    "        df3 = pipeline.data_preparation( df2 )\n",
+    "        #Prediction\n",
+    "        df_response = pipeline.get_prediction( model, test_raw, df3)\n",
+    "\n",
+    "        return df_response\n",
+    "\n",
+    "    else:\n",
+    "            return Response( '{}', status = 200, mimetype= 'application/json')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(0.0.0.)"
+   ]
   },
   {
    "cell_type": "code",
@@ -4907,17 +4830,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df10 = pd.read_csv(  'dataset/test.csv' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge test dataset + Store\n",
+    "df_test = pd.merge( df10, df_store_raw, how= 'left', on='Store')\n",
+    "\n",
+    "# chose store for prediction\n",
+    "df_test = df_test[df_test['Store'] == 22]# Define a loja.\n",
+    "\n",
+    "# remove closed days\n",
+    "df_test = df_test[df_test['Open'] != 0] # dias que a loja esta aberta\n",
+    "df_test = df_test[df_test['Open'].isnull()] # remove os dias loja fechada\n",
+    "df_test = df_test.drop( 'Id', axis=1) # Remove Id"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
