--- a/api/Projeto_rossmann.ipynb
+++ b/api/Projeto_rossmann.ipynb
@@ -4885,6 +4885,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/hallanmiranda/Documents/repos/projeto_portfolio/dsp_rossman/api'"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4894,7 +4914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4909,7 +4929,7 @@
     "\n",
     "class rossmann(object):\n",
     "    def __init__(self):\n",
-    "        self.home_path = '/Users/hallanmiranda/Documents/repos/projeto_portfolio/pa003-Rossman'\n",
+    "        self.home_path = '/Users/hallanmiranda/Documents/repos/projeto_portfolio/dsp_rossman'\n",
     "        self.competition_distace_scaler = pickle.load(open('parameter/competition_distance_scaler.pkl', 'rb'))\n",
     "        self.competition_time_month_scaler = pickle.load(open('parameter/competition_time_month_scaler.pkl', 'rb'))\n",
     "        self.promo_time_week_scaler = pickle.load(open('parameter/promo_time_week_scaler.pkl', 'rb'))\n",
@@ -5067,19 +5087,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/hallanmiranda/Documents/repos/projeto_portfolio/pa003-Rossman/model/model_rossmann.pkl'",
+     "evalue": "[Errno 2] No such file or directory: '/Users/hallanmiranda/Documents/repos/projeto_portfolio/dsp_rossman/model/model_rossmann.pkl'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[95], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrossmann\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRossmann\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rossmann\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Loading model\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload( \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/Users/hallanmiranda/Documents/repos/projeto_portfolio/pa003-Rossman/model/model_rossmann.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m )\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Inicialize API\u001b[39;00m\n\u001b[1;32m     11\u001b[0m app \u001b[38;5;241m=\u001b[39m Flask(\u001b[38;5;18m__name__\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[116], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrossmann\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRossmann\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rossmann\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Loading model\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload( \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/Users/hallanmiranda/Documents/repos/projeto_portfolio/dsp_rossman/model/model_rossmann.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m )\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Inicialize API\u001b[39;00m\n\u001b[1;32m     11\u001b[0m app \u001b[38;5;241m=\u001b[39m Flask(\u001b[38;5;18m__name__\u001b[39m)\n",
       "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/hallanmiranda/Documents/repos/projeto_portfolio/pa003-Rossman/model/model_rossmann.pkl'"
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/hallanmiranda/Documents/repos/projeto_portfolio/dsp_rossman/model/model_rossmann.pkl'"
      ]
     }
    ],
@@ -5091,7 +5111,7 @@
     "from rossmann.Rossmann import Rossmann\n",
     "\n",
     "# Loading model\n",
-    "model = pickle.load( open('/Users/hallanmiranda/Documents/repos/projeto_portfolio/pa003-Rossman/model/model_rossmann.pkl', 'rb') )\n",
+    "model = pickle.load( open('/Users/hallanmiranda/Documents/repos/projeto_portfolio/dsp_rossman/model/model_rossmann.pkl', 'rb') )\n",
     "\n",
     "# Inicialize API\n",
     "app = Flask(__name__)\n",
