--- a/Projeto_rossmann.ipynb
+++ b/Projeto_rossmann.ipynb
@@ -5369,7 +5369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -5379,7 +5379,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[120], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrossmann\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRossmann\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rossmann\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Loading model\u001b[39;00m\n\u001b[1;32m      8\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload( \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman/api/model/model_rossmann.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) )\n",
+      "Cell \u001b[0;32mIn[167], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrossmann\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRossmann\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rossmann\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Loading model\u001b[39;00m\n\u001b[1;32m      8\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload( \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman/webapp/model/model_rossmann.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) )\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rossmann'"
      ]
     }
@@ -5392,7 +5392,7 @@
     "from rossmann.Rossmann import Rossmann\n",
     "\n",
     "# Loading model\n",
-    "model = pickle.load( open('/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman/api/model/model_rossmann.pkl', 'rb') )\n",
+    "model = pickle.load( open('/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman/webapp/model/model_rossmann.pkl', 'rb') )\n",
     "\n",
     "# Inicialize API\n",
     "app = Flask(__name__)\n",
@@ -5440,18 +5440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "import json"
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5461,17 +5461,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Merge test dataset + Store\n",
     "df_test = pd.merge( df10, df_store_raw, how= 'left', on='Store')\n",
     "\n",
     "# chose store for prediction\n",
-    "df_test = df_test[df_test['Store'] == 22]# Define a loja. .isin([24,222,33])\n",
+    "df_test = df_test[df_test['Store'].isin( [20,22,23] )] # == 22]# Define a loja.\n",
     "\n",
     "# remove closed days\n",
     "df_test = df_test[df_test['Open'] != 0] # dias que a loja esta aberta\n",
@@ -5482,7 +5480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5492,7 +5490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -5504,8 +5502,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "\n",
     "# API Call\n",
     "url = 'http://0.0.0.0:5000/rossmann/predict'# para onde vou enviar\n",
     "header = { 'Content-type': 'application/json' }# indica o tipo de dado que esta recebendo\n",
@@ -5518,7 +5514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5527,14 +5523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Store Number22 will sell R$155,280.94 in the next 6 weeks\n"
+      "Store Number20 will sell R$291,043.88 in the next 6 weeks\n",
+      "Store Number22 will sell R$245,614.13 in the next 6 weeks\n",
+      "Store Number23 will sell R$231,819.23 in the next 6 weeks\n"
      ]
     }
    ],
@@ -5542,47 +5540,14 @@
     "d2 = d1[['store', 'prediction']].groupby( 'store' ).sum().reset_index()\n",
     "\n",
     "for i in range(len(d2)):\n",
-    "    print( 'Store Number{} will sell R${:,.2f} in the next 6 weeks'.format(d2.loc[i,'store'], d2.loc[i,'prediction']))"
+    "    print( 'Store Number{} will sell R${:,.2f} in the next 6 weeks'.format(\n",
+    "        d2.loc[i,'store'], \n",
+    "        d2.loc[i,'prediction']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -5591,26 +5556,14 @@
        "'/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "pwd"
+   ]
   },
   {
    "cell_type": "code",
