--- a/Projeto_rossmann.ipynb
+++ b/Projeto_rossmann.ipynb
@@ -233,21 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['store', 'day_of_week', 'date', 'sales', 'customers', 'open', 'promo',\n",
-       "       'state_holiday', 'school_holiday', 'store_type', 'assortment',\n",
-       "       'competition_distance', 'competition_open_since_month',\n",
-       "       'competition_open_since_year', 'promo2', 'promo2_since_week',\n",
-       "       'promo2_since_year', 'promo_interval'],\n",
+       "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
+       "       'StateHoliday', 'SchoolHoliday', 'StoreType', 'Assortment',\n",
+       "       'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+       "       'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
+       "       'Promo2SinceYear', 'PromoInterval'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5179,7 +5179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5368,8 +5368,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5379,7 +5384,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[167], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrossmann\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRossmann\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rossmann\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Loading model\u001b[39;00m\n\u001b[1;32m      8\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload( \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman/webapp/model/model_rossmann.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) )\n",
+      "Cell \u001b[0;32mIn[24], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrossmann\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRossmann\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rossmann\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Loading model\u001b[39;00m\n\u001b[1;32m      8\u001b[0m model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload( \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman/webapp/model/model_rossmann.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) )\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rossmann'"
      ]
     }
@@ -5440,7 +5445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5451,7 +5456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5461,7 +5466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5480,7 +5485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5490,7 +5495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -5514,7 +5519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5523,7 +5528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5543,26 +5548,6 @@
     "    print( 'Store Number{} will sell R${:,.2f} in the next 6 weeks'.format(\n",
     "        d2.loc[i,'store'], \n",
     "        d2.loc[i,'prediction']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/hallanmiranda/Documents/repos/meus_projeto_portfolio/dsp_rossman'"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
    ]
   },
   {
